--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "watch": "npm run build -- --watch",
     "watch:test": "jest --watch"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^20.0.5",
     "@types/node": "^8.0.0",
     "coveralls": "^2.0.0",
     "jest": "^20.0.4",
     "jest-environment-node-debug": "^2.0.0",
+    "node-fetch": "^1.7.3",
     "prettier": "^1.5.2",
     "rimraf": "^2.0.0",
     "ts-jest": "^20.0.7",
